--- a/translations/kangyur/translations/046-001_toh95_play_in_full.xml
+++ b/translations/kangyur/translations/046-001_toh95_play_in_full.xml
@@ -31,7 +31,7 @@
                     daughter, and son</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 4.48.16 <date>2023</date>
+                <edition>v 4.48.17 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -67,7 +67,7 @@
 
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-24T19:08:57.783Z" user="admin">24/07/2023 19:08:57</note>
+                <note type="lastUpdated" date-time="2023-07-25T18:53:01.449Z" user="admin">25/07/2023 18:53:01</note>
                 <note type="updated" update="translation-status" value="1" date-time="2013-05-22T12:00:00.000Z" user="admin">Note added retrospectively based on publication date</note>
                 <note type="updated" update="translation-status" value="1.a" date-time="2013-05-22T12:00:00.000Z" user="admin">Note added retrospectively based on publication date</note>
                 <note type="updated" update="text-version" value="v 4.41" date-time="2019-06-18T02:38:10.693Z" user="celso">v 4.41 2019</note>
@@ -112,6 +112,7 @@
                 <note type="updated" update="text-version" value="4.48.14" date-time="2023-07-19T18:58:48.082Z" user="john">Further edits to intro and biblio following Silk 2022; more to be done.</note>
                 <note type="updated" update="text-version" value="4.48.15" date-time="2023-07-23T16:50:20.744Z" user="celso">minor corrections to a few glossary entries</note>
                 <note type="updated" update="text-version" value="4.48.16" date-time="2023-07-24T19:08:54.535Z" user="john">Further edits to intro w mention of Hokazono's edition, re-rendering in verse of two stanzas near beginning of ch 5.</note>
+                <note type="updated" update="text-version" value="4.48.17" date-time="2023-07-25T18:52:58.218Z" user="john">Further corrections following Silk 2022.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -5192,7 +5193,7 @@
 
                     <lg tid="3172">
                         <l>“How wonderful! Even though the Pure Being</l>
-                        <l>Is learned in all topics in the world,</l>
+                        <l>Is learned in all the treatises, in the world</l>
                         <l>He follows the conventions of the world.</l>
                         <l>Thus he has come to school.</l>
                     </lg>
@@ -5205,10 +5206,10 @@
                     </lg>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-4056"/>
                     <lg tid="3174">
-                        <l>“I see his face,</l>
-                        <l>But the crown of his head is invisible.</l>
-                        <l>If he has mastered the knowledge of scripts,</l>
-                        <l>How can I teach him?</l>
+                        <l>“Although I indeed see his face,</l>
+                        <l>The crown of his head is out of sight.</l>
+                        <l>If his knowledge of scripts is already perfect,</l>
+                        <l>How can I school him in that knowledge?</l>
                     </lg>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-4057"/>
                     <lg tid="3175">
@@ -10679,10 +10680,16 @@
                         son, there is no need to worry; your hardship will pay off. Renouncing the world for the sake of
                         awakening is indeed meaningful. What the priest Asita predicted shall come true. Likewise the
                         prediction of Dīpaṃkara shall come to pass.</tei:p>
-                    <tei:p tid="1564">“It is possible that the world may break into a hundred pieces, and the jewel peak of
-                        Mount Meru may fall into the ocean. The sun, the moon, and the stars may fall to the ground. Yet
-                        although I am an ordinary person, I will not die. Therefore do not bring misery on yourself.
-                        Before long you shall behold the awakening of a buddha.”</tei:p>
+                    <tei:milestone unit="chunk" xml:id="UT22084-046-001-51229"/>
+                    <lg tid="1564">
+                        <l>“It is possible that the world may break into a hundred pieces, </l>
+                        <l>and the jewel peak of Mount Meru may fall into the ocean. </l>
+                        <l>The sun, the moon, and the stars may fall to the ground.</l> 
+                        <l>Yet although I am an ordinary person, I will not die.</l> 
+                        <l>Therefore do not bring misery on yourself.</l>
+                        <l>Before long you shall behold the awakening of a buddha.”</l>
+                    </lg>
+                    <tei:milestone unit="chunk" xml:id="UT22084-046-001-51230"/>
                     <tei:p tid="1565">As soon as Māyādevī heard this, she became overjoyed, and the hair on her body stood
                         on end. Sprinkling the Bodhisattva with māndārava flowers, she circumambulated him three times.
                         Then, accompanied by heavenly music, she went back to her abode. <tei:ref cRef="254" type="sanskrit"/>
@@ -14857,20 +14864,12 @@
                         ten directions.</tei:p>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-1725"/>
                     <tei:p tid="2196">Then the bodhisattvas and gods throughout the ten directions uttered an expression of
-                        joy:</tei:p>
-                    <lg tid="2197">
-                        <l>“An adept among beings, a lotus on the lake of wisdom, has appeared.</l>
-                        <l>Untainted by mundane concerns,</l>
-                        <l>He will cause a cloud of great compassion to mass,</l>
-                        <l>Which will shower throughout the realm of phenomena.</l>
-                    </lg>
+                        joy: </tei:p>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-1726"/>
-                    <lg tid="2198">
-                        <l>“The gentle rain of Dharma, medicine to living beings,</l>
-                        <l>Will cause all the seeds of the roots of virtue to sprout,</l>
-                        <l>Bring growth to the saplings of faith,</l>
-                        <l>And yield the fruits of liberation.”</l>
-                    </lg>
+                    <tei:p tid="2198">“An adept among beings, a lotus on the lake of wisdom, has appeared. Untainted by mundane concerns,
+                        he will cause a cloud of great compassion to mass, which will shower throughout the realm of phenomena.
+                        The gentle rain of Dharma, medicine to living beings, will cause all the seeds of the roots of virtue to sprout,
+                        bring growth to the saplings of faith, and yield the fruits of liberation.”</tei:p>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-1727"/>
                     <tei:p tid="2199">On this topic, it is said:</tei:p>
                     <lg tid="2200">
@@ -16349,14 +16348,11 @@
                         <l>He will then return your bodies to their previous form as you wish.”</l>
                     </lg>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-1923"/>
-                    <tei:p tid="2416">So the daughters went and asked the Thus-Gone One for forgiveness, saying:</tei:p>
-                    <lg tid="2417">
-                        <l>“Well-Gone One, please forgive our offense!</l>
-                        <l>Blessed One, forgive the offense</l>
-                        <l>That we childish, stupid, uncultivated, unskilled, ignorant women</l>
-                        <l>Committed with the wish to insult the Blessed One!” <tei:ref cRef="F.181.b" type="folio" xml:id="UT22084-046-001-4422"/>
-                        </l>
-                    </lg>
+                    <tei:p tid="2416">So the daughters went and asked the Thus-Gone One for forgiveness, saying:
+                    “Well-Gone One, please forgive our offense! Blessed One, forgive the offense that we childish, 
+                    stupid, uncultivated, unskilled, ignorant women committed with the wish to insult 
+                    the Blessed One!” <tei:ref cRef="F.181.b" type="folio" xml:id="UT22084-046-001-4422"/>
+                    </tei:p>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-1924"/>
                     <tei:p tid="2418">The Thus-Gone One spoke to them with these verses:</tei:p>
                     <lg tid="2419">
@@ -16364,9 +16360,11 @@
                         <l>Chew through iron with your teeth,</l>
                         <l>Penetrate a mountain with your head,</l>
                         <l>And measure an unfathomable depth.</l>
+                        <l>Thus do I forgive the offense</l>
+                        <l>That you girls have committed.</l>
                     </lg>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-1925"/>
-                    <tei:p tid="2420">“Thus I forgive the offense of you girls. Why is that? Because it is an advancement in
+                    <tei:p tid="2420">“Why is that? Because it is an advancement in
                         the training of the noble Dharma to understand a fault to be a fault, to confess it, and to vow
                         to abstain from it henceforth.”</tei:p>
                     <lb/>
@@ -17922,20 +17920,29 @@
                         shower the rain of Dharma! Unfold the great victory banner of the Dharma! Blow the great conch
                         of the Dharma! Beat the great drum of the Dharma!”</tei:p>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-2106"/>
-                    <tei:p tid="2665">From everywhere in this trichiliocosm, Brahmā, Śakra, and many guardians appeared.
-                        Bowing their heads to the Victorious One, they said: <tei:ref cRef="414" type="sanskrit"/>
+                    <tei:p tid="2665">About this, it is said:
                     </tei:p>
-                    <tei:p tid="2666">“Great Sage, please remember your earlier promise. Previously you said, ‘I am the
-                        first and the best, I will free all beings from their suffering.’ Sage, as you sat below the
-                        holy tree, you then tamed Māra and his henchmen, and awakened to the peace and sacredness of
-                        supreme awakening. You felled the tree of disturbing emotions. Now all the intentions that you
-                        nurtured for a hundred eons have been fulfilled. So now please look upon those beings who are
-                        without a protector and turn the supreme wheel.”</tei:p>
+                    <lg tid="3183">
+                        <l>From throughout the trichiliocosm, Brahmā, Śakra, and many guardians</l>
+                        <l>Appeared, and bowing their heads to the Victorious One, they said: <tei:ref cRef="414" type="sanskrit"/> </l>
+                        <l>“Great Sage, please remember your earlier promise when previously you said, </l>
+                        <l>‘I am the first and the best, I will end suffering for all beings.’</l>
+                    </lg>
+                    <tei:milestone unit="chunk" xml:id="UT22084-046-001-52108"/>
+                    <lg tid="3184">
+                        <l>Sage, as you sat below the holy tree, you tamed Māra and his minions,</l>
+                        <l>And the peace and sacredness of your supreme awakening felled the tree of disturbing emotions.</l>
+                        <l>Now that all the intentions that you nurtured for a hundred eons have been fulfilled,</l>
+                        <l>Look upon beings bereft of a protector, and turn the supreme wheel.”</l>
+                    </lg>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-2107"/>
-                    <tei:p tid="2667">The light of the Thus-Gone One illuminated hundreds of thousands of buddha realms,
-                        causing many hundreds of sons of the buddhas to arrive miraculously. They offered the Well-Gone
-                        One manifold and vast offerings and praised his qualities. Then they made this request to his
-                        compassionate being:</tei:p>
+                    <lg tid="2667">
+                        <l>The light of the Well-Gone One illuminated hundreds of thousands of buddha realms,</l>
+                        <l>Bringing many hundreds of sons of the buddhas through miraculous power</l>
+                        <l>Who offered the Well-Gone One vast and manifold offerings,</l>
+                        <l>Praised the Thus-Gone One’s true qualities, and invoked the compassionate one thus:</l>
+                    </lg>
+                    <tei:milestone unit="chunk" xml:id="UT22084-046-001-52107"/>
                     <lg tid="2668">
                         <l>“Like a compassionate cloud, a lightning bolt of wisdom, and a wind of insight,</l>
                         <l>For a thousand eons you have nourished beings with your thunderous voice.</l>
@@ -18035,7 +18042,7 @@
                         body so that it suffers and is harmed, you will face difficulties as can be observed right now,
                         and in the future even further misery will fall on you.</tei:p>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-2120"/>
-                    <tei:p tid="2682">“Monks, the Well-Gone One teaches the Dharma by showing the middle way that does not
+                    <tei:p tid="2682">“Monks, the Thus-Gone One teaches the Dharma by showing the middle way that does not
                         fall into either of the two extremes. The Dharma that he teaches is one of correct view,
                         intention, <tei:ref cRef="417" type="sanskrit"/> speech, action, livelihood, effort, mindfulness,
                         and concentration.</tei:p>
@@ -18254,25 +18261,39 @@
                         <l>And were liberated from all unfavorable rebirths.</l>
                     </lg>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-2157"/>
-                    <tei:p tid="2721">Immediately the Thus-Gone One’s unbounded voice went out into the ten directions. Its
-                        sweet and beautiful sound could be heard throughout the heavens: “The Sage of the Śākyas,
-                        endowed with the ten powers, went to the Hill of the Fallen Sages at Vārāṇasī, where he turned
-                        the supreme wheel of Dharma. That is what happened.”</tei:p>
+                    <lg tid="2721">
+                        <l>Immediately the Thus-Gone One’s unbounded voice went out into the ten directions.</l> 
+                        <l>Its sweet and beautiful sound could be heard throughout the heavens:</l> 
+                        <l>“The Sage of the Śākyas, endowed with the ten powers, went to the Hill of the Fallen Sages</l> 
+                        <l>At Vārāṇasī, where he turned the one and only supreme wheel of Dharma.”</l>
+                    </lg>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-2158"/>
-                    <tei:p tid="2722">At the same time hundreds of buddhas, residing in the ten directions, all became
-                        silent. This caused all their attendants to ask the victorious ones, “When we heard this voice,
-                        you stopped the Dharma talk that you were delivering by means of your ten powers. Why did you
-                        become silent? Please tell us right away!”</tei:p>
+                    <lg tid="2722">
+                        <l>Hundreds of buddhas residing in the ten directions all became silent.</l>
+                        <l>All their attendants then asked the victorious ones, </l>
+                        <l>“When we heard this voice, your teaching of Dharma by means of your ten powers fell silent.</l> 
+                        <l>Why did you become silent? Please tell us right away!”</l>
+                    </lg>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-2159"/>
-                    <tei:p tid="2723">The buddhas replied, “In the past, for hundreds of lives this Buddha strove diligently
-                        toward awakening and did better than many hundreds of thousands of bodhisattvas. <tei:ref cRef="422" type="sanskrit"/> Thus he, the Benefactor, attained spiritual heat and the most auspicious
-                        awakening. The Dharma wheel, which revolves three times, has been set in motion, so this is why
-                        we are silent.”</tei:p>
+                    <lg tid="2723">
+                        <l>They replied, “In the past, for hundreds of lives this Buddha strove diligently
+                        toward awakening,</l> 
+                        <l>And outshone as he did so many hundreds of thousands of bodhisattvas. <tei:ref cRef="422" type="sanskrit"/> </l>
+                        <l>Thus did the Benefactor become so thoroughly trained and attain the most auspicious
+                        awakening,</l>
+                        <l>And it is because he has turned the Dharma wheel that revolves three times that
+                        we are silent.”</l>
+                    </lg>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-2160"/>
-                    <tei:p tid="2724">When the hundred million beings heard this answer from the buddhas, they developed the
-                        power of love and entered into supreme and auspicious awakening. Then they said, “Even we are
-                        able to follow in the footsteps of this Sage with all his glorious diligence and power. Now may
-                        we swiftly become the best in this world; may we give to others the eye of Dharma.”</tei:p>
+                    <lg tid="2724">
+                        <l>When the hundred million beings heard this answer from the buddhas,</l> 
+                        <l>They developed the
+                        power of love and entered supreme and auspicious awakening.</l> 
+                        <l>Then they said, “Even we are
+                        able to follow in the footsteps of this Sage with all his glorious diligence and power.</l> 
+                        <l>Now may
+                        we swiftly become the best in this world; may we give to others the eye of Dharma.”</l>
+                    </lg>
                     <lb/>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-2161"/>
                     <tei:p tid="2725">At that point the bodhisattva, the great being, Maitreya said to the Blessed One,
@@ -19396,7 +19417,7 @@
                 </div>
                 <div type="section" xml:id="UT22084-046-001-listBibl-3">
                     <head type="section" tid="3165">Further Resources</head>
-                    <bibl xml:id="UT22084-046-001-3338">Goswami, Bijoya. <title xml:lang="Sa-Ltn">Lalitavistara</title>.
+                    <bibl xml:id="UT22084-046-001-5338">Goswami, Bijoya. <title xml:lang="Sa-Ltn">Lalitavistara</title>.
                         Bibliotheca Indica Series, vol. 320. Calcutta: The Asiatic Society, 2001.</bibl>
                     <bibl xml:id="UT22084-046-001-2339">Khosla, Sarla. <title xml:lang="en">Lalitavistara and the
                             Evolution of Buddha Legend</title>. New Delhi: Galaxy Publications, 1991.</bibl>
