--- a/translations/kangyur/translations/048-003_toh103-the_dharma_discourse_of_the_teaching_on_the_boy_acintyaprabhasa.xml
+++ b/translations/kangyur/translations/048-003_toh103-the_dharma_discourse_of_the_teaching_on_the_boy_acintyaprabhasa.xml
@@ -35,7 +35,7 @@
                 <editor role="TEImarkupEditor" ref="contributors.xml#person-92">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.15 <date>2022</date>
+                <edition>v 1.0.16 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -70,7 +70,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T17:00:02.21Z" user="celso">18/01/2023 17:00:02</note>
+                <note type="lastUpdated" date-time="2023-07-25T23:26:54.544Z" user="admin">25/07/2023 23:26:54</note>
 
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
@@ -97,6 +97,7 @@
                     Andreas</note>
                 <note type="updated" update="text-version" value="v 1.0.0" date-time="2020-06-17T13:47:13.028Z" user="mike">First publication date</note>
                 <note type="updated" update="translation-status" value="1" date-time="2020-06-17T13:47:13.028Z" user="mike">First publication date</note>
+                <note type="updated" update="translation-status" value="1.a" date-time="2020-06-17T13:47:13.028Z" user="admin">Note added retrospectively based on date of status '1'</note>
                 <note type="updated" update="publication-date" value="2020-06-17" date-time="2020-06-17T13:51:09.021Z" user="mike">2020-06-17</note>
                 <note type="updated" update="text-version" value="v 1.0.1" date-time="2020-06-17T14:02:33.061Z" user="john">Minor correction.</note>
                 <note type="updated" update="text-version" value="v 1.0.2" date-time="2020-07-14T11:48:04.288Z" user="andre">corrected Tib for: ting nge
@@ -116,6 +117,7 @@
     <note type="updated" update="text-version" value="1.0.13" date-time="2022-03-08T21:14:16.372Z" user="celso">added missing glossary link</note>
     <note type="updated" update="text-version" value="1.0.14" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
     <note type="updated" update="text-version" value="1.0.15" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.0.16" date-time="2023-07-25T23:26:51.687Z" user="martina-cotter">Updated "Blissful One" to "Well-Gone One"</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -324,7 +326,7 @@
                         much fine food, drink, and other items to be eaten and sipped.</p>
                     <milestone unit="chunk" xml:id="UT22084-048-003-22"/>
                     <p tid="24">He was a blessed, thus-gone, worthy, perfect buddha, one with
-                        perfect knowledge and conduct, a blissful one, a knower of the world, a
+                        perfect knowledge and conduct, a well-Gone One, a knower of the world, a
                         charioteer who tamed beings, an unexcelled being, and a teacher of gods and
                         humans. The Blessed Buddha was renowned for his outstanding caste,
                         outstanding clan, outstanding patrilineage, outstanding discipline,
@@ -335,7 +337,7 @@
                                 pa</foreign>).</note> The Bhagavān’s fame and renown was thus
                         widespread throughout the world. </p>
                     <milestone unit="chunk" xml:id="UT22084-048-003-24"/>
-                    <p tid="25">The Blissful One, the knower of the world, the charioteer who tames
+                    <p tid="25">The Well-Gone One, the knower of the world, the charioteer who tames
                         beings, the unexcelled being, the teacher of gods and humans, the blessed
                         Buddha, was also teaching the Dharma. That is, he was genuinely and fully
                         teaching the sanctified conduct: what is virtuous at first, in the interim,
@@ -372,7 +374,7 @@
                     <p tid="29">Those who were blind were able to see. Those who were deaf were able
                         to hear. The naked found clothing. Those with mental illness regained their
                         faculties. All the townsfolk joined their palms in reverence, offering
-                        homage to the Blissful One. The pleasant sounds of great gongs, earthen
+                        homage to the Well-Gone One. The pleasant sounds of great gongs, earthen
                         drums, and steel drums were audible, although none were struck. Ducks,
                         geese, herons, peacocks, parrots, and cuckoos voiced their <ref cRef="F.276.a" type="folio" xml:id="UT22084-048-003-327"/> delightful songs. Those who had lost their
                         fortunes recovered them. Vessels made of gold and silver rang out, although
@@ -395,7 +397,7 @@
                         beings left who underwent suffering. Beings who had been ill became free
                         from illness and so felt happy. </p>
                     <milestone unit="chunk" xml:id="UT22084-048-003-32"/>
-                    <p tid="33">As the Blissful One passed by,<note place="end" xml:id="UT22084-048-003-33"> “As the Blissful One passed by” is omitted
+                    <p tid="33">As the Well-Gone One passed by,<note place="end" xml:id="UT22084-048-003-33"> “As the Well-Gone One passed by” is omitted
                             in the Dunhuang MS.</note> each person wondered, “Is the Tathāgata
                         looking at me alone?” They each thought, “I shall make my own offering of
                         alms and so reap the exact result of offering alms to the guide of humans.”
@@ -1085,7 +1087,7 @@
                     <milestone unit="chunk" xml:id="UT22084-048-003-144"/>
                     <p tid="156">The Bhagavān answered him, “Great king, once, in the distant past,
                         ninety-one eons ago, the thus-gone, worthy, perfect buddha, the one with
-                        perfect knowledge and conduct, the blissful one, the knower of the world,
+                        perfect knowledge and conduct, the well-Gone One, the knower of the world,
                         the charioteer who tames beings, the unexcelled, the teacher of gods and
                         humans, the blessed buddha known as Vipaśyin appeared in the world.</p>
                     <milestone unit="chunk" xml:id="UT22084-048-003-145"/>
@@ -1386,7 +1388,7 @@
                             folios of the Dunhuang MS are lost, its record of the text ends
                             here.</note> will make his appearance in the world as the thus-gone,
                         worthy, perfect buddha, the one with knowledge and good conduct, the
-                        blissful one, the knower of the world, the charioteer who tames beings, the
+                        well-Gone One, the knower of the world, the charioteer who tames beings, the
                         unexcelled, the teacher of gods and humans known precisely as the blessed
                         buddha Inconceivable Radiance.</p>
                     <milestone unit="chunk" xml:id="UT22084-048-003-199"/>
@@ -1577,11 +1579,10 @@
                             <term xml:lang="Bo-Ltn">lha min </term>
                             <term xml:lang="bo">ལྷ་མིན།</term>
                             <term xml:lang="Sa-Ltn">asura</term>
-                            <term type="definition">A class of semidivine beings who are engaged in
+                            <!--<term type="definition">A class of semidivine beings who are engaged in
                                 a mythic war with the gods (<foreign xml:lang="Sa-Ltn" type="term">deva</foreign>) for possession of the nectar of immortality. In
                                 Buddhist cosmology, they inhabit the realm neighboring that of the
-                                gods, from which they observe the gods with intense jealousy.
-                            </term>
+                                gods, from which they observe the gods with intense jealousy.</term>-->
                         </gloss>
                     </item>
                     <item>
@@ -1623,7 +1624,7 @@
                     </item>
                     <item>
                         <gloss type="term" xml:id="UT22084-048-003-228">
-                            <term>blissful one</term>
+                            <term>well-Gone One</term>
                             <term xml:lang="Bo-Ltn">bde bar gshegs pa </term>
                             <term xml:lang="bo">བདེ་བར་གཤེགས་པ།</term>
                             <term xml:lang="Sa-Ltn">sugata</term>
@@ -1697,13 +1698,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-048-003-235">
+                        <gloss xml:id="UT22084-048-003-235" type="term" mode="match">
                             <term>gandharva</term>
-                            <term xml:lang="Bo-Ltn">dri za </term>
-                            <term xml:lang="bo">དྲི་ཟ།</term>
-                            <term xml:lang="Sa-Ltn">gandharva</term>
-                            <term type="definition">A class of semidivine beings renowned as
-                                celestial musicians.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">dri za</term>
+                            <term xml:lang="bo" type="sourceAttested">དྲི་ཟ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">gandharva</term>
+                            <term type="definition">A class of semidivine beings renowned as celestial musicians.</term>
                         </gloss>
                     </item>
                     <item>
@@ -2177,13 +2177,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-048-003-285">
+                        <gloss xml:id="UT22084-048-003-285" type="person" mode="match">
                             <term>Ānanda</term>
-                            <term xml:lang="Bo-Ltn">kun dga’ bo </term>
-                            <term xml:lang="bo">ཀུན་དགའ་བོ།</term>
-                            <term xml:lang="Sa-Ltn">Ānanda</term>
-                            <term type="definition">Personal attendant and cousin of the Buddha. One
-                                of the ten close <foreign xml:lang="Sa-Ltn" type="term">śrāvaka</foreign> disciples.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">kun dga’ bo</term>
+                            <term xml:lang="bo" type="sourceAttested">ཀུན་དགའ་བོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">ānanda</term>
+                            <term type="definition">Personal attendant and cousin of the Buddha. One of the ten close <foreign xml:lang="Sa-Ltn" type="term">śrāvaka</foreign> disciples.</term>
                         </gloss>
                     </item>
                     <item>
@@ -2349,13 +2348,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="place" xml:id="UT22084-048-003-302">
+                        <gloss xml:id="UT22084-048-003-302" type="place" mode="match">
                             <term>Mount Meru</term>
-                            <term xml:lang="Bo-Ltn">ri rab </term>
-                            <term xml:lang="bo">རི་རབ།</term>
-                            <term xml:lang="Sa-Ltn">Meru</term>
-                            <term type="definition">The geographical center of this realm according
-                                to Buddhist cosmology.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">ri rab</term>
+                            <term xml:lang="bo" type="sourceAttested">རི་རབ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">meru</term>
+                            <term type="definition">The geographical center of this realm according to Buddhist cosmology.</term>
                         </gloss>
                     </item>
                     <item>
